Add corrections about linear fit.

--- a/paper.tex
+++ b/paper.tex
@@ -886,19 +886,20 @@ $S_3$/20 &0.2 &14.45 & 0.686 & 1.204 & 1.149&  4.818 \\
   three samples:  porosity, thickness, scale factor and etching rate.}
 \end{table}
 
-From the data in Table \ref{t:jpdv} we can plot the fitted porosity as
-a function of the calculated density current, as shown for our three
+From the data in Table \ref{t:jpdv} we can plot the fitted porosity vs.
+the calculated density current, as shown for our three
 samples in Fig. \ref{fig:p}.
 \begin{figure}
   \centering
   \includegraphics[width=\textwidth]{pvsj}
-  \caption{Porosity as a function of current density for three samples
+  \caption{Porosity vs. current density for the three samples
     $S_1$, $S_2$, $S_3$. The data points for each sample are joined by
     thick lines. The arrows point to data that correspond to
     position $x'_1=0.2\,\text{cm}$, joined to the other data by thin
-    lines (see text). We include linear fits to the data from
-    sample $S_3$ (thick straight line) and to that from all the
-    samples (thin straight line). }
+    lines (see text). We include linear fits of the form
+    $p=mj_\perp+b$ to the data from
+    sample $S_3$ (thick straight line, with parameters $m=0.0134$ and
+    $b=0.5288$) and to that from all the samples (thin straight line). }
   \label{fig:p}
 \end{figure}
 Notice that for each sample the data points lie around straight lines,
@@ -907,7 +908,7 @@ $x'_1$. As discussed in Sec. \ref{sec:ps-grin-single}, those points
 were very close to a wall of the electrolytic cell, so they were
 affected by leakage currents towards the underside of the wall.
 For this reason, we exclude those points from the following
-analysis. We made a linear fit to the data from sample $S_3$ and to
+analysis. We made a linear fit of the form $p=mj_\perp+b$ to the data from sample $S_3$ and to
 the data from the three samples. A comparison shows that a fit to the
 data of just one sample, $S_3$, turns out to be a reasonable predictor for the
 porosity of all the samples.  From that fit we obtain that for our
