Advance in the reply

--- a/paper.tex
+++ b/paper.tex
@@ -891,7 +891,7 @@ the calculated density current, as shown for our three
 samples in Fig. \ref{fig:p}.
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{pvsj}
+  \includegraphics[width=\textwidth]{pvsjerr}
   \caption{Porosity vs. current density for the three samples
     $S_1$, $S_2$, $S_3$. The data points for each sample are joined by
     thick lines. The arrows point to data that correspond to
@@ -922,19 +922,20 @@ measured the position of the illuminating spot. A rigid displacement along
 $x$ yields mostly a horizontal shift of the results shown in
 Fig. \ref{fig:p} and that can bring them into closer agreement.
 
-Similarly, we can plot the fitted etching rate as
-a function of the calculated density current, as shown for our three
+Similarly, we can plot the fitted etching rate vs.
+the calculated density current, as shown for our three
 samples in Fig. \ref{fig:v}.
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{vvsj}
-  \caption{Etching rate as a function of current density for three samples
+  \includegraphics[width=\textwidth]{vvsjerr}
+  \caption{Etching rate vs. current density for three samples
     $S_1$, $S_2$, $S_3$. The data points for each sample are joined by
     thick lines. The arrows point to data that correspond to
     position $x'_1=0.2\,\text{cm}$, joined to the other data by thin
-    lines (see text). We include linear fits to the data from
-    sample $S_3$ (thick straight line) and to that from all the
-    samples (thin straight line). }
+    lines (see text). We include linear fits of the form
+    $v=mj_\perp+b$ to the data from
+    sample $S_3$ (thick straight line, with parameters $m=0.3543$,
+    $b=0.0924$) and to that from all the samples (thin straight line). }
   \label{fig:v}
 \end{figure}
 As for the porosity, there are outlier points corresponding to the
