--- a/reply.org
+++ b/reply.org
@@ -7,6 +7,7 @@ Handling Editor
 Optical Materials
 #+end_verse
 
+*Cambiar el título?*
 
 Dear Dr. Ferrari,
 
@@ -115,24 +116,45 @@ corresponding changes we performed on our manuscript Ref. No.:  OM-D-20-02614,
    used equation, in reference to their model.
    - We notice that our original wording might have produced some
      confusion. The porosity together with the thickness were /fitted/
-     to optical measurements using Eqs. (18) and (19). Thus, what we
-     show in Fig. 11 as data points are those previously fitted porosity values
-     vs. the computed current density. Thus, when we mentioned that 'we
-     can plot the fitted porosity as a function of the calculated
-     density current' we didn't use any other equation.
+     to optical measurements using Eqs. (18) and (19). These equations
+     are mentioned explicitly in the first lines of Sect. 4.3.
+   - Thus, what we show in Fig. 11 as data points are those previously
+     fitted porosity values vs. the computed current density.
+     When we mentioned that 'we can plot the fitted porosity as a
+     function of the calculated density current' we didn't use any
+     other equation.
    - We believe that the confusion may be eliminated by rewording the
      phrase 'porosity as a function of the calculated density current'
      and rewrite it as 'porosity vs. calculated density current',
-     i.e., by eliminating the word function.
+     i.e., by eliminating the word 'function'.
    - Nevertheless, a few lines afterwards we introduce a new fit: we
      fit the porosity as a function of the current density. To that
      end we use a linear fit of the kind $p=mj_\perp+b$ and we display
-     the show parameters $m$ and $b$ at the top of Fig. 11 and in Eq. (20).
+     the parameters $m$ and $b$ at the top of Fig. 11 and in Eq. (20).
    - To clear up this second fit, following the reviewers advice, we
      wrote down explicitly the equation for this linear fit.
-   - We made similar changes regarding Fig. 12. *pendiente*
+   - We made similar changes regarding Fig. 12.
+7. Could the authors more explain the sentence "For multilayered
+   samples, produced by modulating the current I in time, without
+   changing wafers, these error source would be absent."
 
-. Could the authors more explain the sentence "For multilayered samples, produced by modulating the current I in time, without changing wafers, these error source would be absent."
+   - We believe that the discrepancies between the results for the
+     different samples are due to the poor definition of the reference
+     point from which we measured distances. The horizontal axis in Figs. 11 and 12, the current
+     density, is not a quantity that we measured. Rather, it is a
+     quantity that we calculated using our theory (Eq. (16)) at the
+     positions where we measured the reflectance spectrum from which
+     we obtained the corresponding porosity and etching
+     rate. The input to our theory is the distance $x_n$ from each of
+     these points to the wall of the
+     cell, but we measured the distances $x'_n$ from the border of the
+     chemically attacked region. The difference between these numbers
+     is the distance from the wall to the sealing point
+
+. Nevertheless, the electrochemically attacked region reached
+     further, up to the sealing o-ring. Thus, there is an uncertainty
+     in the actual position of the wall with respect to the edge of
+     the attacked region.
 
 - In table 2 the authors should estimate the uncertainties of their
    results and show the uncertainties on the curves in Figures 11
@@ -141,10 +163,15 @@ corresponding changes we performed on our manuscript Ref. No.:  OM-D-20-02614,
 
 The results should be more discussed with taking into consideration the uncertainties.
 
-- "Furthermore, as the results corresponding to sample G2 in Figs. 11 and 12 seem shifted with respect to those of the other samples," How do the authors explain the shift for the sample G2 in fig 11 and fig 12 ?
+- "Furthermore, as the results corresponding to sample G2 in Figs. 11
+  and 12 seem shifted with respect to those of the other samples," How
+  do the authors explain the shift for the sample G2 in fig 11 and fig
+  12 ?
 
-- the model is performed for a wire electrode. What is the tendency if using a planar electrode on the side, or on the top?
-	In many applications using porous silicon , homogenous porosity as well as etching rate is also required.
+- the model is performed for a wire electrode. What is the tendency if
+  using a planar electrode on the side, or on the top?
+	In many applications using porous silicon , homogenous
+  porosity as well as etching rate is also required.
 	 How is it possible the reduce the porosity gradient in a porous silicon  sample?
 
 - the part "discussion and result" should be renamed by result and discussions
