--- a/paper.tex
+++ b/paper.tex
@@ -787,7 +787,7 @@ the optical spectra, as explained below.
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{R5vslambda}
+  \includegraphics[width=\textwidth]{R5migradvslambda}
   \caption{Reflectance spectra at different positions
     ($x'_n=0.2-1.6\,\text{cm}$, $y=0.74\,\text{cm}$)
     on sample $S_1$ ($I_1=5\,\text{mA}$). We show
@@ -797,7 +797,7 @@ the optical spectra, as explained below.
 \end{figure}
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{R10vslambda}
+  \includegraphics[width=\textwidth]{R10migradvslambda}
   \caption{Reflectance spectra at different positions
     ($x'_n=0.2-1.6\,\text{cm}$, $y=0.74\,\text{cm}$)
     on sample $S_2$ ($I_1=10\,\text{mA}$). We show
@@ -808,7 +808,7 @@ the optical spectra, as explained below.
 
 \begin{figure}
   \centering
-  \includegraphics[width=\textwidth]{R20vslambda}
+  \includegraphics[width=\textwidth]{R20migradvslambda}
   \caption{Reflectance spectra at different positions
     ($x'_n=0.2-1.6\,\text{cm}$, $y=0.74\,\text{cm}$)
     on sample $S_3$ ($I_3=20\,\text{mA}$) (Fig. \ref{fig:SI3}),
