Include position uncertainty

--- a/paper.tex
+++ b/paper.tex
@@ -735,18 +735,19 @@ Fig. \ref{fig:SI3}.
 (Table \ref{t:xj}).
 \begin{table}
   \centering
-  \begin{tabular}{rrr}
-    \(x'_n\)(cm) & \(x\)(cm)& \(j_\perp/I\) (\(\text{cm}^{-2})\)\\
-    from edge& from wall&\\
-    \hline
-    0.2 & 0.06 & 0.722\\
-    0.4 & 0.26 & 0.672\\
-    0.6 & 0.46 & 0.577\\
-    0.8 & 0.66 & 0.464\\
-    1.0 & 0.86 & 0.360\\
-    1.2 & 1.06 & 0.275\\
-    1.4 & 1.26 & 0.211\\
-    1.6 & 1.46 & 0.167\\
+  \renewcommand{\arraystretch}{1.1}
+   \begin{tabular}{rrr}
+     \(x'_n\)(cm) & \(x\)(cm)& \(j_\perp/I\) (\(\text{cm}^{-2})\)\\
+     from edge& from wall&\\
+     \hline
+     0.2 &$ 0.06\pm0.05$ & $0.722^{+0.003}_{-0.007}$\\
+     0.4 &$ 0.26\pm0.05$ & $0.672^{+0.018}_{-0.021}$\\
+     0.6 &$ 0.46\pm0.05$ & $0.577^{+0.027}_{-0.028}$\\
+     0.8 &$ 0.66\pm0.05$ & $0.464^{+0.028}_{-0.028}$\\
+     1.0 &$ 0.86\pm0.05$ & $0.360^{+0.025}_{-0.023}$\\
+     1.2 &$ 1.06\pm0.05$ & $0.275^{+0.019}_{-0.018}$\\
+     1.4 &$ 1.26\pm0.05$ & $0.211^{+0.014}_{-0.013}$\\
+     1.6 &$ 1.46\pm0.05$ & $0.167^{+0.010}_{-0.009}$\\
   \end{tabular}
   \caption{Normalized current density $j_\perp/I$ expected at different positions $x'_n$.}
   \label{t:xj}
